# SteamWrapper

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
Example/: main.cpp
include/: easySteam.h  steamHelper.h
src/: OH2SteamUGC.cpp  easySteam.cpp  steamHelper.cpp
